Closed
Bug 631541
Opened 14 years ago
Closed 14 years ago
versioning assertion triggered running any brightspot swf with -Dverifyonly in debugDebugger shell
Categories
(Tamarin Graveyard :: Virtual Machine, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: dschaffe, Assigned: stejohns)
References
Details
Attachments
(1 file)
1.76 KB,
patch
|
jodyer
:
review+
edwsmith
:
superreview+
dschaffe
:
feedback+
|
Details | Diff | Splinter Review |
Running any brightspot swf with a debugDebugger shell triggers an assertion.
$ ./avmshell_sd -Dverifyonly avmglue.abc /Volumes/Brightspot/as3/as3_091110/as3/dump2/as3/42477.swf
Assertion failed: "((isVersionedURI(uri)))" ("/Users/build/buildbot/tamarin-redux/mac-intel-10_5/repo/core/AvmCore.cpp":4809)
Trace/BPT trap
The injection point was: changeset:
5850:a09d8e95e2d2
user: Steven Johnson <stejohns@adobe.com>
date: Mon Jan 31 17:04:27 2011 -0800
summary: Bug 617156 - Avert the Api Version Number Apocalypse (r=jodyer)
See bug https://bugzilla.mozilla.org/show_bug.cgi?id=617156
Assignee | ||
Comment 1•14 years ago
|
||
See patch for explanation.
Assignee: nobody → stejohns
Attachment #509826 -
Flags: superreview?(edwsmith)
Attachment #509826 -
Flags: review?(jodyer)
Assignee | ||
Updated•14 years ago
|
Attachment #509826 -
Flags: feedback?(dschaffe)
Attachment #509826 -
Flags: review?(jodyer) → review+
Reporter | ||
Comment 2•14 years ago
|
||
Comment on attachment 509826 [details] [diff] [review]
Silence the assertion
confirmed the patched shell runs -Dverifyonly without the assertion in AvmCore.cpp on brightspot swfs. I started a full run with the debugDebugger shell.
Attachment #509826 -
Flags: feedback?(dschaffe) → feedback+
Assignee | ||
Comment 3•14 years ago
|
||
TR 5896:bfbc6d260f40
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Comment 4•14 years ago
|
||
Comment on attachment 509826 [details] [diff] [review]
Silence the assertion
Could this have been fixed by passing the right swf version to the shell, or better, picking up the swf version from "something.swf"?
Attachment #509826 -
Flags: superreview?(edwsmith) → superreview+
You need to log in
before you can comment on or make changes to this bug.
Description
•