Bug 631541 - versioning assertion triggered running any brightspot swf with -Dverifyonly in debugDebugger shell (r=jodyer)